:bug: Fix Input.Group align in Form.Item
https://codesandbox.io/s/antd-reproduction-template-3x2kv

--- a/components/form/style/components.less
+++ b/components/form/style/components.less
@@ -67,13 +67,4 @@
   .@{ant-prefix}-input-group .@{ant-prefix}-cascader-picker {
     width: auto;
   }
-
-  // fix input with addon position. https://github.com/ant-design/ant-design/issues/8243
-  :not(.@{ant-prefix}-input-group-wrapper) > .@{ant-prefix}-input-group,
-  .@{ant-prefix}-input-group-wrapper {
-    position: relative;
-    top: -1px;
-    display: inline-block;
-    vertical-align: middle;
-  }
 }
